--- a/ARTIFACTS/1 HTML/3 inlinecss.html
+++ b/ARTIFACTS/1 HTML/3 inlinecss.html
@@ -19,8 +19,8 @@
       function messageFunction() {
          // alert message on the browser
          // alert("welcome from message function");
-         for (var i = 0; i < 5; i++) {
-            console.log("welcome from message function.....");
+         for(var i=0; i< 5; i++) {
+         console.log("welcome from message function.....");
          }
       }
    </script>
@@ -31,28 +31,28 @@
    <p style="background-color: aqua;">
       Web Page Desinging Master Session
       <!-- nested elements -->
-      <span style="color:red">
-         Use Live Server for a better experience...
-      </span>
+   <span style="color:red">
+      Use Live Server for a better experience...
+   </span>
    </p>
-   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quo, quos amet libero laboriosam aut in quia,
-      omnis, odio aliquam <SPAN>SPAN :MY SPAN</SPAN> repellat enim obcaecati dicta tempora voluptas. Expedita nihil hic
-      laudantium.</p>
+   <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe quo, quos amet libero laboriosam aut in quia, omnis, odio aliquam    <SPAN>SPAN :MY SPAN</SPAN> repellat enim obcaecati dicta tempora voluptas. Expedita nihil hic laudantium.</p>
+   
+   <!-- inline styles -->
+   <span style="color:brown"> Coffee</SPAN>
+      <span style="color:green"> Tea</span>
 
+
+      <span> Pepsi</SPAN>
+         <span > Fresh Juice</span>
    <hr />
    <form>
-      <h1>Login Form</h1><br><br>
+      <h1>Login Form</h1>
       <!-- empty elements -->
-      <label for="userName">User Name</label> <br><br>
-      <label for="userPassword">Password :</label> <br><br>
-      <input type="text" id="userName" /> <br><br><br>
-    
-
-      <input type="text" id="userPassword" /> <br><br><br>
+      <input type="text" />
+      <input type="password" />
       <!-- event : user action -->
       <button onclick="alert('simple javascript')">Message</button>
       <button onclick="messageFunction()"> Call Message Function</button>
    </form>
 </body>
-
 </html>
