--- a/ARTIFACTS/1 HTML/5 externalstyle.html
+++ b/ARTIFACTS/1 HTML/5 externalstyle.html
@@ -11,9 +11,18 @@
    <!-- meta data -->
    <title>Web Page Design</title>
    <!-- ending tag -->
+   <link rel="stylesheet" href="5 externalstyle.css">
 </head>
 
-<body>
+<body> 
+   <!-- link an external stylesheet -->
+   <style>
+      /* internal style sheet */
+      /* style to applicable to the document */
+      span {
+         color: blue;
+      }
+   </style>
    <!-- script tag adds javascript to the page -->
    <script>
       function messageFunction() {
@@ -39,20 +48,25 @@
       omnis, odio aliquam <SPAN>SPAN :MY SPAN</SPAN> repellat enim obcaecati dicta tempora voluptas. Expedita nihil hic
       laudantium.</p>
 
+   <!-- inline styles -->
+   <span style="color:brown"> Coffee</SPAN>
+   <span style="color:green"> Tea</span>
+
+
+   <span> Pepsi</span>
+   <span> Fresh Juice</span>
    <hr />
    <form>
-      <h1>Login Form</h1><br><br>
+      <h1>Login Form</h1>
       <!-- empty elements -->
-      <label for="userName">User Name</label> <br><br>
-      <label for="userPassword">Password :</label> <br><br>
-      <input type="text" id="userName" /> <br><br><br>
-    
-
-      <input type="text" id="userPassword" /> <br><br><br>
+      <input type="text" />
+      <input type="password" />
       <!-- event : user action -->
       <button onclick="alert('simple javascript')">Message</button>
       <button onclick="messageFunction()"> Call Message Function</button>
    </form>
+   <!-- at the end -->
+   <!-- <link rel="stylesheet" href="5 externalstyle.css"> -->
+   <a href="https://www.google.com">Go go Google</a>
 </body>
-
 </html>
