--- a/ARTIFACTS/1 HTML/7flex-layout.html
+++ b/ARTIFACTS/1 HTML/7flex-layout.html
@@ -31,13 +31,13 @@
       <div class="container">Element 6</div>
    </div>
    <br>
-   <div class="container-flex">
+   <!-- <div class="container-flex">
       <div class="container">Element 1</div>
       <div class="container">Element 2</div>
       <div class="container">Element 3</div>
       <div class="container">Element 4</div>
       <div class="container">Element 5</div>
       <div class="container">Element 6</div>
-   </div>
+   </div> -->
 </body>
 </html>
