--- a/ARTIFACTS/1 HTML/7flex-layout.html
+++ b/ARTIFACTS/1 HTML/7flex-layout.html
@@ -6,9 +6,16 @@
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
    <title>Document</title>
    <style>
-      .container-flex {
+      .container-flex-row {
          display:flex;
          background-color: blueviolet;
+         flex-direction: row;
+      }
+      .container-flex-column {
+         display:flex;
+         background-color: blueviolet;
+         flex-direction: column;
+         width: 350px;
       }
       .container {
          margin: 5px;
@@ -22,7 +29,7 @@
    </style>
 </head>
 <body>
-   <div class="container-flex">
+   <div class="container-flex-row">
       <div class="container">Element 1</div>
       <div class="container">Element 2</div>
       <div class="container">Element 3</div>
@@ -31,13 +38,13 @@
       <div class="container">Element 6</div>
    </div>
    <br>
-   <!-- <div class="container-flex">
+   <div class="container-flex-column">
       <div class="container">Element 1</div>
       <div class="container">Element 2</div>
       <div class="container">Element 3</div>
       <div class="container">Element 4</div>
       <div class="container">Element 5</div>
       <div class="container">Element 6</div>
-   </div> -->
+   </div>
 </body>
 </html>
