--- a/ARTIFACTS/1 HTML with Javascript/92 XHREx.html
+++ b/ARTIFACTS/1 HTML with Javascript/92 XHREx.html
@@ -33,7 +33,8 @@
          // send the request
 
                   // default /  operation
-         console.log("default xhr : aysnc ")
+         console.log("default xhr : aysnc ");
+         // REST API.
          xhr.open("GET", "https://api.github.com/users/twbs" );
          // send the request
          console.log("step 4 send")
