--- a/2 HTML/09-bootstrap.html
+++ b/2 HTML/09-bootstrap.html
@@ -12,6 +12,28 @@
 </head>
 
 <body>
+   <br><br>
+   <div class="container">
+      <table class="table table-hover table-bordered" style="width:500px;">
+         <thead>
+            <tr>
+               <th class="table-primary">ProductID</th>
+               <th class="table-primary">ProductName</th>
+            </tr>
+         </thead>
+         <tbody>
+            <tr>
+               <td class="table-success">P01</td>
+               <td class="table-success">Laptop</td>
+            </tr>
+            <tr>
+               <td class="table table-danger">P02</td>
+               <td class="table table-danger">Macbook</td>
+            </tr>
+         </tbody>
+      </table>
+      </div>
+
    <div class="container">
       <br><br><br>
       <form>
@@ -33,6 +55,7 @@
          <button class="btn btn-warning">Clear</button>
       </form>
    </div>
+
 </body>
 
 </html>
